fix(style): Fix wrong color for --prompto-accent

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 :root {
   --prompto-primary: #8a2cc5;
   --prompto-secondary: #0097fe;
-  --prompto-accent: #8a2cc5;
+  --prompto-accent: #380d54;
   --prompto-gray-dark: #555555;
   --prompto-gray-medium: #afaba5;
   --prompto-gray-light: #dadada;
